--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -136,6 +136,13 @@ jobs:
 
     runs-on:                        ${{ matrix.config.building_on_os }}
     steps:
+      - if:                         ${{ matrix.config.target_os == 'macos' }}
+	name:                       Select Xcode version
+	steps:
+	- uses: maxim-lobanov/setup-xcode@v1
+	  with:
+	    xcode-version: '11.7'
+
       # Checkout code
       - name:                       Checkout code
         uses:                       actions/checkout@v2
