--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -136,12 +136,11 @@ jobs:
 
     runs-on:                        ${{ matrix.config.building_on_os }}
     steps:
-      - if:                         ${{ matrix.config.target_os == 'macos' }}
-	name:                       Select Xcode version
-	steps:
-	- uses: maxim-lobanov/setup-xcode@v1
-	  with:
-	    xcode-version: '11.7'
+      - name:                       Select Xcode version
+        if:                         ${{ matrix.config.target_os == 'macos' }}
+	uses: maxim-lobanov/setup-xcode@v1
+	with:
+	  xcode-version: '11.7'
 
       # Checkout code
       - name:                       Checkout code
