--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -111,15 +111,31 @@ jobs:
            - config_name:           MacOS (codeQL)
              target_os:             macos
              building_on_os:        macos-10.15
-             cmd1_prebuild:         "./autobuild/mac/codeQL/autobuild_mac_1_prepare.sh"
+             cmd1_prebuild:         "./autobuild/mac/codeQL/autobuild_mac_1_prepare.sh 5.12.10"
              cmd2_build:            "./autobuild/mac/codeQL/autobuild_mac_2_build.sh"
              cmd3_postbuild:        false
              uses_codeql:           true
 
-           - config_name:           MacOS (artifacts)
+           - config_name:           MacOS (artifacts for Qt 5.9.9)
              target_os:             macos
              building_on_os:        macos-10.15
-             cmd1_prebuild:         "./autobuild/mac/artifacts/autobuild_mac_1_prepare.sh"
+             cmd1_prebuild:         "./autobuild/mac/artifacts/autobuild_mac_1_prepare.sh 5.9.9"
+             cmd2_build:            "./autobuild/mac/artifacts/autobuild_mac_2_build.sh"
+             cmd3_postbuild:        "./autobuild/mac/artifacts/autobuild_mac_3_copy_files.sh"
+             uses_codeql:           false
+
+           - config_name:           MacOS (artifacts for Qt 5.12.10)
+             target_os:             macos
+             building_on_os:        macos-10.15
+             cmd1_prebuild:         "./autobuild/mac/artifacts/autobuild_mac_1_prepare.sh 5.12.10"
+             cmd2_build:            "./autobuild/mac/artifacts/autobuild_mac_2_build.sh"
+             cmd3_postbuild:        "./autobuild/mac/artifacts/autobuild_mac_3_copy_files.sh"
+             uses_codeql:           false
+
+           - config_name:           MacOS (artifacts for Qt 5.15.2)
+             target_os:             macos
+             building_on_os:        macos-10.15
+             cmd1_prebuild:         "./autobuild/mac/artifacts/autobuild_mac_1_prepare.sh 5.15.2"
              cmd2_build:            "./autobuild/mac/artifacts/autobuild_mac_2_build.sh"
              cmd3_postbuild:        "./autobuild/mac/artifacts/autobuild_mac_3_copy_files.sh"
              uses_codeql:           false
