--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -152,7 +152,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: tracer-logs
-          path: /home/runner/work/_temp/codeql_databases/log/build-tracer.log
+          path: /home/runner/work/_temp/compound-build-tracer.log
           retention-days: 31
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
 
@@ -160,3 +160,5 @@ jobs:
       - name: Perform CodeQL Analysis
         if: matrix.config.uses_codeql
         uses: github/codeql-action/analyze@v1.0.15
+        with:
+          skip-queries: true
