--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -138,6 +138,7 @@ jobs:
           MACOS_CERTIFICATE_ID: ${{ secrets.MACOS_CERT_ID }}
           NOTARIZATION_PASSWORD: ${{ secrets.NOTARIZATION_PASSWORD }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          SEMMLE_DEBUG_TRACER: "10000"
 
       - name: "Post-Build for ${{ matrix.config.config_name }}"
         id: step_cmd3_postbuild
